--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "communicator",
+  "name": "frntnd-communicator",
   "version": "0.0.1",
   "description": "Communicator is a module that abstracts the communication between server and client using Connections, Requests and Adapters.",
   "main": "index.js",
