--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
   },
   "dependencies": {
     "frntnd-cacher": "0.0.1",
-    "frntnd-class-with-plugins": "0.0.2",
-    "frntnd-promise-util": "0.0.1",
     "frntnd-route-util": "0.0.1",
     "jquery": "^2.1.4",
     "lodash": "^3.10.1",
@@ -33,11 +31,9 @@
     "gulp": "^3.9.0",
     "gulp-babel": "^5.1.0",
     "gulp-browserify": "^0.5.1",
-    "gulp-connect": "^2.2.0",
     "gulp-gzip": "^1.2.0",
     "gulp-if": "^1.2.5",
     "gulp-jsdoc": "^0.1.4",
-    "gulp-less": "^3.0.3",
     "gulp-load-plugins": "^0.10.0",
     "gulp-rimraf": "^0.1.1",
     "gulp-shell": "^0.4.2",
@@ -48,6 +44,7 @@
     "include-all": "^0.1.6",
     "jsdoc": "^3.3.3",
     "jsdoc-babel": "^0.1.0",
+    "jsdoc-oblivion": "0.0.4",
     "karma": "^0.13.0",
     "karma-babel-preprocessor": "^5.2.1",
     "karma-browserify": "^4.2.1",
