refactoring, commenting and adding tests, added karma-jsmockito-jshamcrest

--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "jsdoc": "^3.3.3",
     "jsdoc-babel": "^0.1.0",
     "jsdoc-oblivion": "0.0.4",
+    "jshamcrest": "^0.7.0",
+    "jsmockito": "^1.0.5",
     "karma": "^0.13.0",
     "karma-babel-preprocessor": "^5.2.1",
     "karma-browserify": "^4.2.1",
@@ -53,6 +55,7 @@
     "karma-chrome-launcher": "^0.1.12",
     "karma-es6-transpiler-preprocessor": "0.0.1",
     "karma-firefox-launcher": "^0.1.6",
+    "karma-jsmockito-jshamcrest": "0.0.6",
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "^0.2.0",
     "karma-sinon": "^1.0.4",
