--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/.bin/gulp build",
-    "test": "./node_modules/.bin/gulp test"
+    "test": "./node_modules/.bin/gulp test",
+    "ci": "./node_modules/.bin/gulp test:ci"
   },
   "author": "Rik Hoffbauer",
   "license": "ISC",
@@ -26,6 +27,7 @@
     "babel-core": "^5.8.3",
     "babelify": "^6.1.3",
     "browserify": "^10.2.6",
+    "browserify-babel-istanbul": "^0.2.3",
     "chai": "^3.0.0",
     "chai-as-promised": "^5.1.0",
     "gulp": "^3.9.0",
@@ -42,6 +44,7 @@
     "gulp-taskrunner": "0.0.1",
     "gulp-util": "^3.0.6",
     "include-all": "^0.1.6",
+    "install": "^0.1.8",
     "jsdoc": "^3.3.3",
     "jsdoc-babel": "^0.1.0",
     "jsdoc-oblivion": "0.0.4",
@@ -53,6 +56,7 @@
     "karma-chai": "^0.1.0",
     "karma-chai-as-promised": "^0.1.2",
     "karma-chrome-launcher": "^0.1.12",
+    "karma-coverage": "^0.5.2",
     "karma-es6-transpiler-preprocessor": "0.0.1",
     "karma-firefox-launcher": "^0.1.6",
     "karma-jsmockito-jshamcrest": "0.0.6",
@@ -62,6 +66,7 @@
     "karma-sinon-chai": "^1.1.0",
     "karma-spec-reporter": "0.0.19",
     "mocha": "^2.2.5",
+    "npm": "^3.3.8",
     "phantomjs": "^1.9.17",
     "phantomjs-polyfill": "0.0.1",
     "proxyquire": "^1.6.0",
