--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "./node_modules/.bin/gulp build",
+    "prod": "./node_modules/.bin/gulp prod",
     "test": "./node_modules/.bin/gulp test",
     "ci": "./node_modules/.bin/gulp test:ci"
   },
